tests/fixtures/invalid/statement_after_final_expr.torel
unit fixtures.statement_after_final_expr;

export proc main() -> Int32 {
    42
    return 42;
}
